updated profs page. Added filtering in sidebar. Made boxes slightly bigger. Cut off text out of range of box and made it wrap inside box (issue #24). Still meed to somehow indicate that there is cut off text. Added search bar on prof page.

--- a/website/my_css.css
+++ b/website/my_css.css
@@ -1,16 +1,34 @@
-.fixed_sidebar{
-  position: fixed;
-  top: 55px;
-  left: 20px;
-  width: 200px;
+body{
+	padding-top:95px;
 }
 
-.top_bar{
-	background-color:#052f6d;
-	}
+.fixed_sidebar{
+  position: fixed;
+  top: 95px;
+  left: 20px;
+  width: 175px;
+}
+
+.search_bar{
+	position: fixed;
+	width:100%;
+    left: 0px;
+	top:40px;
+	z-index:10000;
+	background-color: #f9f9f9;
+	border-bottom: 1px solid #dddddd;
+	padding:6px;
+}
+
+.bar_form{
+	margin:0px; 
+	padding:0px;
+}
 
 .prof_content {
-  margin-left: 220px; /*20 more than fixed_sidebar width*/
+  margin-top:0px;
+  padding:0px;
+  margin-left: 195px; /*20 more than fixed_sidebar width*/
 }
 
 .center{
@@ -20,16 +38,18 @@
 .prof_box{
 	color:#000000;
 	width:250px; 
-	height:100px;
+	height:105px;
 	background-color:#eeeeee;
 }
 
 .prof_image{
 	float:left;
+	padding-right:6px;
 }
 .prof_info{
-	float:left;
-	padding: 2px 10px;
+	padding: 1px 0px;
+	height:105px;
+	overflow:hidden;
 }
    
 .prof_box:hover{
@@ -37,14 +57,8 @@
 	text-decoration: none;
 }
   
-.left_sidebar{
-	position:fixed;
-	top:50px;
-	left:10px;
-	width:200px;
-}
 
 .thumbnail {
-  max-width: 90px;
-  max-height: 100px;
+  max-width: 100px;
+  max-height: 105px;
 }
